# simple-music-api

./: README.md  pyproject.toml
album_fastapi/: crud.py  database.py  main.py  models.py  schemas.py
tests/: sql_app.db  test_main.py
